--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
     background-color: #00000099;
     z-index: 1;
 }
-.salary{
+.salary, .fod{
     color: #fff;
     text-align: center;
 }
